--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="colorStatusBar">#757575</color>
-    <color name="colorBlankPage">#F7F7F7</color>
+    <color name="colorPrimary">#FF2D19</color>
+    <color name="colorPrimaryDark">#FF2D19</color>
+    <color name="colorAccent">#FF2D19</color>
 </resources>
